# FPR_LIB

./: .gitignore  CMakeLists.txt  FPR_LIB.code-workspace
include/FPR/debug/: Logger.h  assert.h  level.h  log.h
include/fpr/: assert.h  log.h
include/fpr/debug/: assert.h  log.h
include/fpr/log/: BufNewLine.h  IndentGuard.h  Location.h  ansicc.h
include/fpr/log/callback/: Indent.h
include/fpr/stl/: Enumerate.h  Reverse.h  Zip.h  bmap.h  views.h
include/fpr/util/: fdstreambuf.h  repeat.h
src/: CMakeLists.txt  log.cpp  test.cpp
src/debug/: CMakeLists.txt  Logger.cpp  assert.cpp  level.cpp  log.cpp
src/log/: CMakeLists.txt  IndentGuard.cpp  Location.cpp  assert.cpp
src/util/: fdstreambuf.cpp  repeat.cpp
test_results/: old_vs_new.txt
